--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "octokit": "^2.0.14",
-    "probot": "^12.2.4"
+    "probot": "^12.3.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "jest": "^29.0.0",
