--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@octokit/rest": "^19.0.7",
+    "@octokit/webhooks": "^10.7.0",
     "axios": "^1.3.4",
+    "github-webhook-handler": "^1.0.0",
     "octokit": "^2.0.14",
     "probot": "^12.3.0",
     "request": "^2.88.2"
