--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gitbeaker/node": "^35.8.1",
     "@octokit/rest": "^19.0.7",
     "@octokit/webhooks": "^10.7.0",
     "axios": "^1.3.4",
     "axios-mock-adapter": "^1.21.4",
     "github-webhook-handler": "^1.0.0",
+    "gitlab": "^14.2.2",
     "octokit": "^2.0.14",
     "probot": "^12.3.0",
     "request": "^2.88.2"
